final commit of sign in sign up with authorization project complete project

--- a/partials/navbar.ejs
+++ b/partials/navbar.ejs
@@ -9,4 +9,14 @@
       Login
     </ul></a
   >
+  <a href="/auth"
+    ><ul class="m-2 hover:text-white">
+      Authrization
+    </ul></a
+  >
+  <a href="/logout"
+    ><ul class="m-2 hover:text-white">
+      logout
+    </ul></a
+  >
 </ul>
