--- a/views/contact.ejs
+++ b/views/contact.ejs
@@ -1,3 +1,2 @@
-<%- include("../partials/meta") %>
-<%- include("../partials/navbar") %>
-<h1>this page is rendered after successsfull login</h1>
+<%- include("../partials/meta") %> <%- include("../partials/navbar") %>
+<h1>contact us page ..this page is rendered after successsfull login</h1>
